--- a/tour-list.html
+++ b/tour-list.html
@@ -60,7 +60,7 @@
         }
 
         .main {
-            background: url(img/50161-Barahona-Enriquillo-Coastal-Highway.jpg);
+            background: url(images/50161-Barahona-Enriquillo-Coastal-Highway.jpg);
             background-size: cover;
             height: 550px;
             color: white;
@@ -349,7 +349,7 @@
                     <button>&#x2630</button>
                 </div>
                 <div>
-                    <img src="img/logoETB-1.webp" alt="">
+                    <img src="images/logoETB-1.webp" alt="">
                 </div>
                 <div>
                     <button>&#128222 Get in touch</button>
@@ -383,19 +383,19 @@
         <div class="container">
             <div class="smlogo">
                 <div class="com">
-                    <div><img src="img/img3.png" alt=""></div>
+                    <div><img src="images/img3.png" alt=""></div>
                     <h3>ALL CATEGORIES</h3>
                 </div>
                 <div class="com">
-                    <div><img src="img/img1.png" alt=""></div>
+                    <div><img src="images/img1.png" alt=""></div>
                     <h3>DAY-TRIPS</h3>
                 </div>
                 <div class="com">
-                    <div><img src="img/img2.png" alt=""></div>
+                    <div><img src="images/img2.png" alt=""></div>
                     <h3>MULTI-DAY TRIPS</h3>
                 </div>
                 <div class="com">
-                    <div><img src="img/img3.png" alt=""></div>
+                    <div><img src="images/img3.png" alt=""></div>
                     <h3>PRIVATE-TOURS</h3>
                 </div>
             </div>
@@ -404,7 +404,7 @@
             <div class="start">
                 <div class="row">
                     <div class="r1">
-                        <div><img src="img/mountain.avif" alt=""></div>
+                        <div><img src="images/mountain.avif" alt=""></div>
                         <div class="col">
                             <div class="c1">
                                 <div>
@@ -430,7 +430,7 @@
                             </div>
                             <div class="c4">
                                 <div class="c5">
-                                    <div><img src="img/owl.png" alt=""></div>
+                                    <div><img src="images/owl.png" alt=""></div>
                                     <div>
                                         <input type="radio" name="rad26" aria-label="Search" checked>
                                         <input type="radio" name="rad27" aria-label="Search" checked>
@@ -456,7 +456,7 @@
             <div class="start">
                 <div class="row">
                     <div class="r1">
-                        <div><img src="img/sunset2.avif" alt=""></div>
+                        <div><img src="images/sunset2.avif" alt=""></div>
                         <div class="col">
                             <div class="c1">
                                 <div>
@@ -482,7 +482,7 @@
                             </div>
                             <div class="c4">
                                 <div class="c5">
-                                    <div><img src="img/owl.png" alt=""></div>
+                                    <div><img src="images/owl.png" alt=""></div>
                                     <div>
                                         <input type="radio" name="rad1" aria-label="Search" checked>
                                         <input type="radio" name="rad2" aria-label="Search" checked>
@@ -507,7 +507,7 @@
             <div class="start">
                 <div class="row">
                     <div class="r1">
-                        <div><img src="img/wave.avif" alt=""></div>
+                        <div><img src="images/wave.avif" alt=""></div>
                         <div class="col">
                             <div class="c1">
                                 <div>
@@ -533,7 +533,7 @@
                             </div>
                             <div class="c4">
                                 <div class="c5">
-                                    <div><img src="img/owl.png" alt=""></div>
+                                    <div><img src="images/owl.png" alt=""></div>
                                     <div>
                                         <input type="radio" name="rad6" aria-label="Search" checked>
                                         <input type="radio" name="rad7" aria-label="Search" checked>
@@ -558,7 +558,7 @@
             <div class="start">
                 <div class="row">
                     <div class="r1">
-                        <div><img src="img/boat.avif" alt=""></div>
+                        <div><img src="images/boat.avif" alt=""></div>
                         <div class="col">
                             <div class="c1">
                                 <div>
@@ -584,7 +584,7 @@
                             </div>
                             <div class="c4">
                                 <div class="c5">
-                                    <div><img src="img/owl.png" alt=""></div>
+                                    <div><img src="images/owl.png" alt=""></div>
                                     <div>
                                         <input type="radio" name="rad11" aria-label="Search" checked>
                                         <input type="radio" name="rad12" aria-label="Search" checked>
@@ -609,7 +609,7 @@
             <div class="start">
                 <div class="row">
                     <div class="r1">
-                        <div><img src="img/city.avif" alt=""></div>
+                        <div><img src="images/city.avif" alt=""></div>
                         <div class="col">
                             <div class="c1">
                                 <div>
@@ -635,7 +635,7 @@
                             </div>
                             <div class="c4">
                                 <div class="c5">
-                                    <div><img src="img/owl.png" alt=""></div>
+                                    <div><img src="images/owl.png" alt=""></div>
                                     <div>
                                         <input type="radio" name="rad16" aria-label="Search" checked>
                                         <input type="radio" name="rad17" aria-label="Search" checked>
@@ -660,7 +660,7 @@
             <div class="start">
                 <div class="row">
                     <div class="r1">
-                        <div><img src="img/forest.avif" alt=""></div>
+                        <div><img src="images/forest.avif" alt=""></div>
                         <div class="col">
                             <div class="c1">
                                 <div>
@@ -686,7 +686,7 @@
                             </div>
                             <div class="c4">
                                 <div class="c5">
-                                    <div><img src="img/owl.png" alt=""></div>
+                                    <div><img src="images/owl.png" alt=""></div>
                                     <div>
                                         <input type="radio" name="rad21" aria-label="Search" checked>
                                         <input type="radio" name="rad22" aria-label="Search" checked>
@@ -723,7 +723,7 @@
         <div class="featurebox">
             <h2>Featured Travel Experience</h2>
             <div class="picrow">
-                <div style="background-image: url(img/photo-1607992922515-7e38329e65d4.avif); height: 400px;">
+                <div style="background-image: url(images/photo-1607992922515-7e38329e65d4.avif); height: 400px;">
                     <div>
                         <div class="pad">
                             <h2>Garden of Eden</h2>
@@ -736,7 +736,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="background-image: url(img/photo-1613706903647-77e255eff994.avif);">
+                <div style="background-image: url(images/photo-1613706903647-77e255eff994.avif);">
                     <div>
                         <div class="pad">
                             <h2>Untouched Paradise</h2>
@@ -746,7 +746,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="background-image: url(img/photo-1621157281974-e926449624e3.avif);">
+                <div style="background-image: url(images/photo-1621157281974-e926449624e3.avif);">
                     <div>
                         <div class="pad">
                             <h2>Cloud Forest Mountain</h2>
@@ -768,10 +768,10 @@
         <div class="container">
             <div class="c7">
                 <div>
-                    <img src="img/footlogo.avif" alt=""></img>
+                    <img src="images/footlogo.avif" alt=""></img>
                     <p>Ecotour Barahona is your favourite specialist for authentic, unique and memorable round trips,
                         day trips and activites in Southwest of Dominican Republic.</p>
-                    <img src="img/footlogo2.avif" alt="">
+                    <img src="images/footlogo2.avif" alt="">
                     <p>Travel environmentally friendly with us and discover the main destinations of the Dominican
                         Republic.</p>
                 </div>
@@ -808,7 +808,7 @@
                             <i class="fa-brands fa-instagram" style="color: #ffffff; margin:5px;"></i>
                         </div>
                         <div>
-                            <img src="img/whitelogo3.png" width="25px" style="padding-top: 5px;" alt=""></img>
+                            <img src="images/whitelogo3.png" width="25px" style="padding-top: 5px;" alt=""></img>
                         </div>
                     </div>
                 </div>
