--- a/private-tour-popup.html
+++ b/private-tour-popup.html
@@ -424,24 +424,24 @@
                     <div class="left2">
                         <div class="left2a">
                             <div>
-                                <img src="/images/pic11.png" alt="pic1">    
+                                <img src="images/pic11.webp" alt="pic1">    
                             </div>
                             <div>
-                                <img src="/images/pic22.png" alt="pic1">    
+                                <img src="images/pic22.webp" alt="pic1">    
                             </div>
                             <div>
-                                <img src="/images/pic33.png" alt="pic1">    
+                                <img src="images/pic33.webp" alt="pic1">    
                             </div>
                         </div>
                         <div class="left3">
                             <div>
-                                <img src="/images/pic22.png" alt="pic1" >    
+                                <img src="images/pic22.webp" alt="pic1" >    
                             </div>
                             <div>
-                                <img src="/images/pic44.png" alt="pic1" >    
+                                <img src="images/pic44.webp" alt="pic1" >    
                             </div>
                             <div>
-                                <img src="/images/pic11.png" alt="pic1">    
+                                <img src="images/pic11.webp" alt="pic1">    
                             </div>
                         </div>
                     </div>
