--- a/tour-expand.html
+++ b/tour-expand.html
@@ -62,7 +62,7 @@
         }
 
         .main {
-            background: url(img/50161-Barahona-Enriquillo-Coastal-Highway.jpg);
+            background: url(images/50161-Barahona-Enriquillo-Coastal-Highway.jpg);
             background-size: cover;
             height: 550px;
             color: white;
@@ -354,7 +354,7 @@
                     <button>&#x2630</button>
                 </div>
                 <div>
-                    <img src="img/logoETB-1.webp" alt="">
+                    <img src="images/logoETB-1.webp" alt="">
                 </div>
                 <div>
                     <button>&#128222 Get in touch</button>
@@ -388,28 +388,27 @@
         <div class="container">
             <div class="smlogo">
                 <div class="com">
-                    <div><img src="img/img3.png" alt=""></div>
+                    <div><img src="images/img3.png" alt=""></div>
                     <h3>ALL CATEGORIES</h3>
                 </div>
                 <div class="com">
-                    <div><img src="img/img1.png" alt=""></div>
+                    <div><img src="images/img1.png" alt=""></div>
                     <h3>DAY-TRIPS</h3>
                 </div>
                 <div class="com">
-                    <div><img src="img/img2.png" alt=""></div>
+                    <div><img src="images/img2.png" alt=""></div>
                     <h3>MULTI-DAY TRIPS</h3>
                 </div>
                 <div class="com">
-                    <div><img src="img/img3.png" alt=""></div>
+                    <div><img src="images/img3.png" alt=""></div>
                     <h3>PRIVATE-TOURS</h3>
                 </div>
             </div>
 
-
             <div class="start">
                 <div class="row">
                     <div class="r1">
-                        <div><img src="img/mountain.avif" alt=""></div>
+                        <div><img src="images/mountain.avif" alt=""></div>
                         <div class="col">
                             <div class="c1">
                                 <div>
@@ -453,7 +452,7 @@
                             </div>
                             <div class="c4">
                                 <div class="c5">
-                                    <div><img src="img/owl.png" alt=""></div>
+                                    <div><img src="images/owl.png" alt=""></div>
                                     <div>
                                         <input type="radio" name="rad26" checked>
                                         <input type="radio" name="rad27" checked>
@@ -479,7 +478,7 @@
             <div class="start">
                 <div class="row">
                     <div class="r1">
-                        <div><img src="img/sunset2.avif" alt=""></div>
+                        <div><img src="images/sunset2.avif" alt=""></div>
                         <div class="col">
                             <div class="c1">
                                 <div>
@@ -517,7 +516,7 @@
                             </div>
                             <div class="c4">
                                 <div class="c5">
-                                    <div><img src="img/owl.png" alt=""></div>
+                                    <div><img src="images/owl.png" alt=""></div>
                                     <div>
                                         <input type="radio" name="rad1" checked>
                                         <input type="radio" name="rad2" checked>
@@ -542,7 +541,7 @@
             <div class="start">
                 <div class="row">
                     <div class="r1">
-                        <div><img src="img/wave.avif" alt=""></div>
+                        <div><img src="images/wave.avif" alt=""></div>
                         <div class="col">
                             <div class="c1">
                                 <div>
@@ -580,7 +579,7 @@
                             </div>
                             <div class="c4">
                                 <div class="c5">
-                                    <div><img src="img/owl.png" alt=""></div>
+                                    <div><img src="images/owl.png" alt=""></div>
                                     <div>
                                         <input type="radio" name="rad6" checked>
                                         <input type="radio" name="rad7" checked>
@@ -605,7 +604,7 @@
             <div class="start">
                 <div class="row">
                     <div class="r1">
-                        <div><img src="img/boat.avif" alt=""></div>
+                        <div><img src="images/boat.avif" alt=""></div>
                         <div class="col">
                             <div class="c1">
                                 <div>
@@ -643,7 +642,7 @@
                             </div>
                             <div class="c4">
                                 <div class="c5">
-                                    <div><img src="img/owl.png" alt=""></div>
+                                    <div><img src="images/owl.png" alt=""></div>
                                     <div>
                                         <input type="radio" name="rad11" checked>
                                         <input type="radio" name="rad12" checked>
@@ -668,7 +667,7 @@
             <div class="start">
                 <div class="row">
                     <div class="r1">
-                        <div><img src="img/city.avif" alt=""></div>
+                        <div><img src="images/city.avif" alt=""></div>
                         <div class="col">
                             <div class="c1">
                                 <div>
@@ -706,7 +705,7 @@
                             </div>
                             <div class="c4">
                                 <div class="c5">
-                                    <div><img src="img/owl.png" alt=""></div>
+                                    <div><img src="images/owl.png" alt=""></div>
                                     <div>
                                         <input type="radio" name="rad16" checked>
                                         <input type="radio" name="rad17" checked>
@@ -731,7 +730,7 @@
             <div class="start">
                 <div class="row">
                     <div class="r1">
-                        <div><img src="img/forest.avif" alt=""></div>
+                        <div><img src="images/forest.avif" alt=""></div>
                         <div class="col">
                             <div class="c1">
                                 <div>
@@ -769,7 +768,7 @@
                             </div>
                             <div class="c4">
                                 <div class="c5">
-                                    <div><img src="img/owl.png" alt=""></div>
+                                    <div><img src="images/owl.png" alt=""></div>
                                     <div>
                                         <input type="radio" name="rad21" checked>
                                         <input type="radio" name="rad22" checked>
@@ -806,7 +805,7 @@
         <div class="featurebox">
             <h2>Featured Travel Experience</h2>
             <div class="picrow">
-                <div style="background-image: url(img/photo-1607992922515-7e38329e65d4.avif); height: 400px;">
+                <div style="background-image: url(images/photo-1607992922515-7e38329e65d4.avif); height: 400px;">
                     <div>
                         <div class="pad">
                             <h2>Garden of Eden</h2>
@@ -819,7 +818,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="background-image: url(img/photo-1613706903647-77e255eff994.avif);">
+                <div style="background-image: url(images/photo-1613706903647-77e255eff994.avif);">
                     <div>
                         <div class="pad">
                             <h2>Untouched Paradise</h2>
@@ -829,7 +828,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="background-image: url(img/photo-1621157281974-e926449624e3.avif);">
+                <div style="background-image: url(images/photo-1621157281974-e926449624e3.avif);">
                     <div>
                         <div class="pad">
                             <h2>Cloud Forest Mountain</h2>
@@ -851,10 +850,10 @@
         <div class="container">
             <div class="end">
                 <div class="endcol1">
-                    <div><img src="img/logoETB-1.webp" alt="logo"></div>
+                    <div><img src="images/logoETB-1.webp" alt="logo"></div>
                     <p>Ecotour Barahona is your favoritew specialist for authentic , unique and memorable round trips,
                         day trips and activities in southwerst of Dominican republic.</p>
-                    <div><img src="img/logo2.png" alt="2" /></div>
+                    <div><img src="images/logo2.png" alt="2" /></div>
                     <p>Travel environmentally friendly with us and discover the main destinations of the dominician
                         republic</p>
                 </div>
@@ -891,12 +890,11 @@
                     <div>
                         <div><i style="color: white" class="fa-brands fa-facebook "></i></div>
                         <div><i style="color: white" class="fa-brands fa-instagram "></i></div>
-                        <div><img src="img/icon.png" alt=""></div>
+                        <div><img src="images/icon.png" alt=""></div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
 </body>
-
 </html>
