--- a/destination.html
+++ b/destination.html
@@ -33,6 +33,13 @@
             margin: auto;
         }
 
+        header {
+            position: sticky;
+            top: 0;
+            z-index: 1;
+            background-color: white;
+        }
+
         .row1 {
             display: flex;
             flex-wrap: wrap;
@@ -45,21 +52,75 @@
             width: 30%
         }
 
-        .row1>div:first-child>button {
-            border: 0;
-            background-color: white;
-            font-size: 30px;
-        }
-
-        .row1 a {
-            border: rgb(162 205 93) 1px solid;
-            padding: 0px 20px;
-            background-color: white;
+        /************************menubar-start******************************* */
+        a {
+            text-decoration: none;
             cursor: pointer;
             font-variant: small-caps;
+            font-family: funer;
+            padding: 0px 20px;
+        }
+
+        .nav {
+            list-style: none;
+            background-color: rgb(162 205 93);
+            margin: 0;
+            padding: 10px;
+            display: none;
+            text-align: center;
+        }
+
+        .nav>div {
+            display: grid;
+            grid-template-columns: repeat(4, 15%);
+            justify-content: space-evenly;
+        }
+
+        .nav a {
+            color: rgb(0 0 0);
+            font-size: large;
+            display: block;
+            border-radius: 50%;
+            font-weight: 400;
+            font-size: 1.3rem;
+        }
+
+        .nav a:hover {
+            background-color: rgb(152, 196, 82);
+        }
+
+        #open,
+        #exit {
+            visibility: hidden;
+            position: absolute;
+        }
+
+        #open:checked~.row1 label[for="open"],
+        label[for="exit"] {
+            display: none;
+        }
+
+        #open:checked~.row1 label[for="exit"],
+        #open:checked~.nav {
+            display: block;
+        }
+
+        label[for="open"] {
+            cursor: pointer;
+            font-size: 2rem;
+        }
+
+        label[for="exit"] {
+            cursor: pointer;
+            font-size: 1.5rem;
+        }
+
+        /************************menubar-end******************************* */
+        .call>a {
+            border: rgb(162 205 93) 1px solid;
+            background-color: white;
             font-size: medium;
             font-weight: 600;
-            font-family: funer;
             color: rgb(100 78 60);
 
         }
@@ -299,14 +360,9 @@
             justify-content: end;
         }
 
-        a {
-            text-decoration: none;
+        .sec6 a {
             color: white;
-            display: inline-block;
             background-color: rgb(155 205 82);
-            padding: 0 20px;
-            font-family: funer;
-            font-variant: small-caps;
         }
 
         .sec6 h4 {
@@ -325,19 +381,19 @@
             width: 50%;
             margin: auto;
             display: grid;
-            grid-template-columns: 50% 20%;
+            grid-template-columns: 50% 30%;
             justify-content: space-between;
             align-items: center;
+        }
+
+        .sec7>div>div:last-child {
+            text-align: end;
         }
 
         .sec7>div>div:first-child {
             display: flex;
             flex-wrap: wrap;
-
-        }
-
-        .sec7>div>div:first-child>div:first-child {
-            width: 20%;
+            justify-content: space-between;
         }
 
         .sec7 h3 {
@@ -429,6 +485,15 @@
                 width: 100%;
             }
 
+            .nav>div {
+                grid-template-columns: repeat(2, 1fr);
+
+            }
+
+            .nav a {
+                font-size: 2rem;
+            }
+
             .main {
                 background-position: center;
             }
@@ -477,18 +542,35 @@
 </head>
 
 <body>
-    <header class="box">
-        <div class="row1">
+    <header>
+        <!-- ****************menubar-start***************** -->
+        <input type="radio" id="open" name="v1">
+        <input type="radio" id="exit" name="v1">
+        <div class="row1 box">
             <div>
-                <button>&#x2630</button>
+                <label for="open">
+                    &#x2630
+                </label>
+                <label for="exit">
+                    <i class="fa-solid fa-x"></i>
+                </label>
             </div>
             <div>
                 <img src="images/logoETB-1.webp" alt="">
             </div>
-            <div>
+            <div class="call">
                 <a href="#call"><i class="fa-solid fa-phone"></i>&emsp;get in touch</a>
             </div>
         </div>
+        <ul class="nav">
+            <div>
+                <li><a href="index.html">home page</a></li>
+                <li><a href="private-tour.html">private tours</a></li>
+                <li><a href="tour-expand.html">tour list</a></li>
+                <li><a href="single-tour-page.html">single tour</a></li>
+            </div>
+        </ul>
+        <!-- ****************menubar-end***************** -->
     </header>
     <div class="main">
         <div>
@@ -604,7 +686,7 @@
                     </h4>
                 </div>
                 <ul>
-                    <li><a href="#tour">show all our tours</a></li>
+                    <li><a href="tour-expand.html">show all our tours</a></li>
                 </ul>
             </div>
             <div class="imge">
