file name change

--- a/destination.html
+++ b/destination.html
@@ -80,13 +80,12 @@
             color: rgb(0 0 0);
             font-size: large;
             display: block;
-            border-radius: 50%;
             font-weight: 400;
             font-size: 1.3rem;
         }
 
         .nav a:hover {
-            background-color: rgb(152, 196, 82);
+            color: white;
         }
 
         #open,
@@ -566,7 +565,7 @@
             <div>
                 <li><a href="index.html">home page</a></li>
                 <li><a href="private-tour.html">private tours</a></li>
-                <li><a href="tour-expand.html">tour list</a></li>
+                <li><a href="tour-list-expand.html">tour list</a></li>
                 <li><a href="single-tour-page.html">single tour</a></li>
             </div>
         </ul>
