file name change

--- a/destination.html
+++ b/destination.html
@@ -685,7 +685,7 @@
                     </h4>
                 </div>
                 <ul>
-                    <li><a href="tour-expand.html">show all our tours</a></li>
+                    <li><a href="tour-list-expand.html">show all our tours</a></li>
                 </ul>
             </div>
             <div class="imge">
