--- a/private-tour.html
+++ b/private-tour.html
@@ -832,7 +832,7 @@
             <div>
                 <li><a href="index.html">home page</a></li>
                 <li><a href="destination.html">destination</a></li>
-                <li><a href="tour-expand.html">tour list</a></li>
+                <li><a href="tour-list-expand.html">tour list</a></li>
                 <li><a href="single-tour-page.html">single tour</a></li>
             </div>
         </ul>
