--- a/private-tour.html
+++ b/private-tour.html
@@ -25,6 +25,7 @@
             margin: 0;
         }
 
+
         header {
             position: sticky;
             top: 0;
@@ -33,10 +34,11 @@
         }
 
         .row1 {
+            width: 80%;
+            margin: auto;
             display: grid;
-            grid-template-columns: repeat(3, 33.3333%);
-            text-align: center;
-            align-items: center;
+            grid-template-columns: auto auto auto;
+            justify-content: space-between;
             padding: 20px;
         }
 
@@ -97,6 +99,7 @@
         label[for="open"] {
             cursor: pointer;
             font-size: 2rem;
+            margin: 10px;
         }
 
         label[for="exit"] {
@@ -112,6 +115,7 @@
             padding: 10px;
         } */
         .call>button {
+            margin: 10px;
             padding: 8px;
             color: #644e3c;
             background-color: white;
