Updated file name of tour list expamd

--- a/single-tour-page.html
+++ b/single-tour-page.html
@@ -590,7 +590,7 @@
         <ul class="menu">
             <li><a href="index.html">home</a></li>
             <li><a href="private-tour.html">private tour</a></li>
-            <li><a href="tour-expand.html">tour expand</a></li>
+            <li><a href="tour-list-expand.html">tour expand</a></li>
             <li><a href="destination.html">destination</a></li>
         </ul>
     </section>
