--- a/destination.html
+++ b/destination.html
@@ -90,8 +90,7 @@
 
         #open,
         #exit {
-            visibility: hidden;
-            position: absolute;
+            display: none;
         }
 
         #open:checked~.row1 label[for="open"],
