--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -20,10 +24,99 @@
         </div>
     </div>
     <div class="main">
-        <header>
-
+        <header class="blog-box">
+            <div>
+                <div>
+                    <label for="#open">&#x2630</label>
+                </div>
+                <div>
+                    <img src="images/search-interface-symbol.png" alt="">
+                </div>
+            </div>
+            <div></div>
+            <div></div>
         </header>
-        <h1>blog</h1>
+        <h2 class="blog-box">Blog</h2>
+        <div class="blog-r1 blog-box">
+            <ul>
+                <li><a href="customer.html">Dashboard</a></li>
+                <li></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li></li>
+                <li><a href="#list">List</a></li>
+            </ul>
+        </div>
+        <div class="blog-box">
+            <div class="blog-r2">
+                <h6>Hello,Admin</h6>
+                <a href="edit.html">New Post</a>
+            </div>
+        </div>
+        <h2 class="blog-box">
+            Recent Articles
+        </h2>
+        <div class="blog-p blog-box">
+            <p>Discover the latest news, tips and user research insights from Acme.</p>
+            <p>You will learn about web infrastructure, design systems and devops APIs best practices.</p>
+        </div>
+        <hr>
+        <div class="blog-r3 blog-box">
+            <div>
+                <a href="post-details.html" style="background-image: url(images/blog-main1.webp);"></a>
+                <div>
+                    <p>Programming</p>
+                    <a href="post-details.html">
+                        <h3>Why I Still Lisp, and You Should Too</h3>
+                    </a>
+                    <p>Aliquam dapibus elementum nulla at malesuada. Ut mi nisl, aliquet non mollis vel, feugiat non
+                        nibh.
+                    </p>
+                    <div>
+                        <div>
+                            <div>
+                                <img src="images/avatar-jie-yan-song.png" alt="">
+                            </div>
+                            <h5>By Jie Yan Song • Apr 6, 2023
+                            </h5>
+                        </div>
+                        <div>
+                            <p>5 min read</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <a href="post-details.html" style="background-image: url(images/blog-main2.webp);"></a>
+                <div>
+                    <p>Productivity</p>
+                    <a href="post-details.html">
+                        <h3>Scrum Has Hit the Glass Ceiling</h3>
+                    </a>
+                    <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                </div>
+            </div>
+            <div>
+                <a href="post-details.html" style="background-image: url(images/blog-main3.webp);"></a>
+                <div>
+                    <p>Entrepreneurs</p>
+                    <a href="post-details.html">
+                        <h3>How Model View Controller (MVC) Architectures Work</h3>
+                    </a>
+                    <p>Praesent eget leo mauris. Morbi ac vulputate nibh. In hac habitasse platea dictumst.</p>
+                </div>
+            </div>
+            <div>
+                <a href="post-details.html" style="background-image: url(images/blog-main4.webp);"></a>
+                <div>
+                    <p>Innovation</p>
+                    <a href="post-details.html">
+                        <h3>Generating Passive Income Is Hard, Here Is a Better Option</h3>
+                    </a>
+                    <p>Phasellus eu commodo lacus, eget tristique nunc. Ut ullamcorper semper nunc sit amet vehicula.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
