--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,9 @@
             <div></div>
             <div></div>
         </header>
-        <h2 class="blog-box blog-h2">Blog</h2>
+        <div class="blog-margin">
+            <h2 class="blog-box blog-h2">Blog</h2>
+        </div>
         <div class="blog-r1 blog-box">
             <ul>
                 <li><a href="customer.html">Dashboard</a></li>
