--- a/Index.html
+++ b/Index.html
@@ -383,10 +383,10 @@
 
         <div class="bg">
             <div class="container">
-                <a href="../Basic_structure/basicStructure.html">DESTINATION</a>
-                <a href="">TOUR PAGE</a>
-                <a href="">PRIVATE TOUR </a>
-                <a href="">SINGLE TOUR PAGE</a>
+                <a href="destination.html">DESTINATION</a>
+                <a href="tour-list-expand.html">TOUR LIST</a>
+                <a href="private-tour.html">PRIVATE TOUR </a>
+                <a href="single-tour-page.html">SINGLE TOUR PAGE</a>
             </div>
         </div>
     </header>
